# moeptimizer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  OPTIMIZATION_REVIEW.md  README.md  REVIEW.md  cache_preservation_guide.md  llm.txt  notes.md  notes2.md  pyproject.toml  review01.md  review02.md  review03.md
scripts/: benchmark.py  benchmark_all.sh  benchmark_dashboard.html  benchmark_gate.py  dev.sh  diag_dryrun_opencode.py  diag_inspect_trim.py  diag_live_prompt_compare.py  diag_opt_prompt_compare.py  diag_replay_opencode.py  diag_shrink.py  diag_strip_trace.py  diag_trace_summary_loss3.py  diag_trace_t16.py  diag_trace_t16_detail.py  diag_trace_t16_stages.py  diag_trace_trim.py  diag_turn11.py  diag_turn4_detailed.py  diag_ws_logs.py  run.sh  test_compact_summary.py  test_frozen_end.py  test_prefix_match.py  test_summarizer_bug.py
scripts/fixtures/: Dockerfile  README.md  __init__.py  loader.py  pyproject.toml  users.jsonl
scripts/fixtures/tests/: test_users.py
scripts/fixtures/users/: __init__.py  cli.py  config.py  metrics.py  models.py  repository.py  service.py
src/moeptimizer/: __init__.py  __main__.py  app.py  async_io_stage.py  attention_sink.py  backend_capabilities.py  backend_client.py  cache.py  cache_aware_chunker.py  cache_registry.py  chunk_fingerprint.py  circuit_breaker.py  code_block_optimizer.py  code_chunking.py  compactor.py  config.py  config_check.py  context_aligner.py  context_canonicalizer.py  context_compressor.py  context_template_matcher.py  delta_encoder.py  dependency_orderer.py  embedding.py  embedding_cache_invalidation.py  expert_cache.py  goal_decomposer.py  goal_relevance_scorer.py  hierarchical_index.py  hierarchical_summarizer.py  hit_prediction_model.py  incremental_updater.py  kv_cache_warmup.py  kv_slot_tracker.py  loop_detector.py  models.py  mtp_head_checkpoint.py  mtp_speculative.py  mtp_state.py  optimizer.py  (+22 more)
tests/: __init__.py  conftest.py  test_app.py  test_attention_sink.py  test_backend_capabilities.py  test_backend_client.py  test_benchmark_code_capture.py  test_benchmark_gate.py  test_benchmark_long_horizon.py  test_cache.py  test_cache_aware_chunker.py  test_cache_registry.py  test_chunk_fingerprint.py  test_circuit_breaker.py  test_code_chunking.py  test_compactor.py  test_config.py  test_context_aligner.py  test_context_canonicalizer.py  test_context_compressor.py  test_context_integrity.py  test_context_template_matcher.py  test_delta_encoder.py  test_dependency_orderer.py  test_e2e.py  test_embedding.py  test_embedding_cache_invalidation.py  test_expert_cache.py  test_goal_decomposer.py  test_goal_relevance_scorer.py  test_hierarchical_index.py  test_hierarchical_summarizer.py  test_hit_prediction_model.py  test_incremental_updater.py  test_kv_cache_warmup.py  test_live_zone_compression.py  test_loop_detector.py  test_mtp_head_checkpoint.py  test_mtp_speculative.py  test_mtp_state.py  (+23 more)
