[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moeptimizer"
version = "0.6.0"
description = "Transparent OpenAI API proxy that optimizes context for MoE + MTP models in multi-turns agentic tasks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Abel", email = "abel@example.com" },
]
keywords = ["moe", "agentic", "llm", "middleware", "fastapi", "rag", "lancedb", "mtp", "speculative-decoding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "openai>=1.70.0",
    "httpx2>=2.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "tiktoken>=0.11.0",
    "pygments>=2.19.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=1.8.0",
    "lancedb>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
    "mypy>=2.0.0",
    "httpx2[http2]>=2.0.0",
    "requests>=2.32.0",
]
prediction = [
    "xgboost>=3.0.0",
]
all = [
    "xgboost>=3.0.0",
]

[project.scripts]
moeptimizer = "moeptimizer.__main__:main"
moeptimizer-config-check = "moeptimizer.config_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/moeptimizer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ""

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true