[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "users-analytics"
version = "0.1.0"
description = "Tiny JSONL-backed user-analytics service (benchmark fixture)"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["users"]

[tool.pytest.ini_options]
testpaths = ["tests"]
